[gd_scene load_steps=2 format=2]

[ext_resource path="res://Soldiers/Collisioner.gd" type="Script" id=1]

[node name="Collisioner" type="Node2D"]
script = ExtResource( 1 )

[node name="Front" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 40 )

[node name="FrontDirector" type="Node2D" parent="Front"]
position = Vector2( 3.49691e-06, 40 )

[node name="Front2" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Front3" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Left" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="LeftDirector" type="Node2D" parent="Left"]
position = Vector2( 0, 40 )

[node name="Left2" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Left3" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Right" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="RightDirector" type="Node2D" parent="Right"]
position = Vector2( 0, 40 )

[node name="Right2" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Right3" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="FrontLeft" type="RayCast2D" parent="."]
rotation = 2.35619
enabled = true
cast_to = Vector2( 0, 40 )

[node name="FrontLeftDirector" type="Node2D" parent="FrontLeft"]
position = Vector2( 1.90735e-06, 39.598 )

[node name="FrontRight" type="RayCast2D" parent="."]
rotation = 3.92699
enabled = true
cast_to = Vector2( 0, 40 )

[node name="FrontRightDirector" type="Node2D" parent="FrontRight"]
position = Vector2( -9.53674e-06, 39.598 )

[node name="Back" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 40 )

[node name="BackDirector" type="Node2D" parent="Back"]
position = Vector2( 0, 39 )

[node name="Back2" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Back3" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 40 )

[node name="BackLeft" type="RayCast2D" parent="."]
rotation = 0.785398
enabled = true
cast_to = Vector2( 0, 40 )

[node name="BackLeftDirector" type="Node2D" parent="BackLeft"]
position = Vector2( 1.90735e-06, 39.598 )

[node name="BackRight" type="RayCast2D" parent="."]
rotation = -0.785398
enabled = true
cast_to = Vector2( 0, 40 )

[node name="BackRightDirector" type="Node2D" parent="BackRight"]
position = Vector2( -1.90735e-06, 39.598 )
